--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,5 +1,8 @@
 (* OASIS_START *)
-(* DO NOT EDIT (digest: e50db38d140321f4b931ed21db6d1923) *)
-Authors of parallel
-Ivan Gotovchits <ivg@ieee.org>
+(* DO NOT EDIT (digest: ec50cd6052c5c7edabafe97758cc8e91) *)
+
+Authors of lwt_parallel:
+
+* Ivan Gotovchits <ivg@ieee.org>
+
 (* OASIS_STOP *)
