--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,7 +1,7 @@
 (* OASIS_START *)
-(* DO NOT EDIT (digest: ec50cd6052c5c7edabafe97758cc8e91) *)
+(* DO NOT EDIT (digest: 517c12044b86ec946e30c2f51729e666) *)
 
-Authors of lwt_parallel:
+Authors of lwt-parallel:
 
 * Ivan Gotovchits <ivg@ieee.org>
 
