--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -19,6 +19,7 @@ Installing
 ==========
 
 1. Uncompress the source archive and go to the root of the package
+2. Run 'oasis setup'
 2. Run 'ocaml setup.ml -configure'
 3. Run 'ocaml setup.ml -build'
 4. Run 'ocaml setup.ml -install'
